tests/ui/fail_invalid_level.stderr
error: level must be either "debug" or "info"
 --> tests/ui/fail_invalid_level.rs:4:24
  |
4 | #[measure_time(level = "warn")]
  |                        ^^^^^^
